frontend/tests/errors/ER-003/int_to_bool/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Type mismatches are reported as compile-time errors | Type mismatch: cannot assign integer to boolean


&^main() -> #i32 {
    x:#b = 5
    0
}
